# pycodestyle_magic

./: pyproject.toml
