
[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pycodestyle_magic"
author = "Mattijn van Hoek"
author-email = "mattijn@gmail.com"
home-page = "https://github.com/mattijn/pycodestyle_magic"
classifiers = ["License :: OSI Approved :: MIT License"]

